Created header nav list and h1 tag.

--- a/html/index.html
+++ b/html/index.html
@@ -1,10 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="schotcut icon" href="https://img.icons8.com/color/48/000000/python--v1.png" type="image/x-icon"/>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Язык Python</title>
 </head>
 <body>
-
+    <header>
+        <h1>Язык Python</h1>
+        <nav>
+            <ul>
+                <li><a href="/">Главная</a></li>
+                <li><a href="/">Типы и конструкции</a></li>
+                <li><a href="/">Встроенные функции</a></li>
+                <li><a href="/">Дополнительно</a></li>
+                <li><a href="/">Пакеты</a></li>
+                <li><a href="/">История языка</a></li>
+            </ul>
+        </nav>
+    </header>
 </body>
 </html>
