--- a/html/index.html
+++ b/html/index.html
@@ -2,14 +2,15 @@
 <html lang="en">
 <head>
     <link rel="schotcut icon" href="https://img.icons8.com/color/48/000000/python--v1.png" type="image/x-icon"/>
+    <link rel="stylesheet" href="../css/nav.css">
     <meta charset="UTF-8">
     <title>Язык Python</title>
 </head>
 <body>
     <header>
         <h1>Язык Python</h1>
-        <nav>
-            <ul>
+        <nav class="nav">
+            <ul class="menu">
                 <li><a href="/">Главная</a></li>
                 <li><a href="/">Типы и конструкции</a></li>
                 <li><a href="/">Встроенные функции</a></li>
