--- a/html/builtins/index.html
+++ b/html/builtins/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../../css/article.css">
     <link rel="stylesheet" href="../../css/builtins-table.css">
     <link rel="stylesheet" href="../../css/builtins-list.css">
+    <link rel="stylesheet" href="../../css/footer.css">
     <title>Встроенные функции</title>
 </head>
 <body>
@@ -24,7 +25,7 @@
         </ul>
     </nav>
 </header>
-<article style="width: 94.5%">
+<article>
     <div id="table-div">
         <table class="table">
             <tr class="table-main-title">
@@ -155,5 +156,10 @@
             <li>tuple(obj) - преобразование к кортежу.</li>
         </ul>
 </article>
+<footer>
+    <div class="footer-block">
+        <p>2021 - <a href="https://vk.com/kirilllapushinskiy">kirilllapushinskiy</a></p>
+    </div>
+</footer>
 </body>
 </html>
