--- a/html/types/index.html
+++ b/html/types/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../../css/article.css">
     <link rel="stylesheet" href="../../css/types-table.css">
     <link rel="stylesheet" href="../../css/types-list.css">
+    <link rel="stylesheet" href="../../css/footer.css">
     <title>Типы и конструкции</title>
 </head>
 <body>
@@ -149,5 +150,10 @@
     <p>Неупорядочное множество, не содержит дубликатов; может содержать внутри себя различные хешируемые типы данных</p>
     <p>Многоточие (элипсис). Используется в основном в NumPy для сокращённого задания среза многомерного массива. В самом Python присутствует для поддержки пользовательских типов и таких расширений, как NumPy</p>
 </article>
+<footer>
+    <div class="footer-block">
+        <p>2021 - <a href="https://vk.com/kirilllapushinskiy">kirilllapushinskiy</a></p>
+    </div>
+</footer>
 </body>
 </html>
