--- a/html/index.html
+++ b/html/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="../css/nav.css">
     <link rel="stylesheet" href="../css/body.css">
     <link rel="stylesheet" href="../css/article.css">
+    <link rel="stylesheet" href="../css/footer.css">
     <meta charset="UTF-8">
     <title>Язык Python</title>
 </head>
@@ -29,6 +30,10 @@
         <p>Стандартная библиотека включает большой набор полезных переносимых функций, начиная от функционала для работы с текстом и заканчивая средствами для написания сетевых приложений. Дополнительные возможности, такие как математическое моделирование, работа с оборудованием, написание веб-приложений или разработка игр, могут реализовываться посредством обширного количества сторонних библиотек, а также интеграцией библиотек, написанных на Си или C++, при этом и сам интерпретатор Python может интегрироваться в проекты, написанные на этих языках. Существует и специализированный репозиторий программного обеспечения, написанного на Python, — PyPI. Данный репозиторий предоставляет средства для простой установки пакетов в операционную систему и стал стандартом де-факто для Python. По состоянию на 2019 год в нём содержалось более 175 тысяч пакетов.</p>
         <p>Python стал одним из самых популярных языков, он используется в анализе данных, машинном обучении, DevOps и веб-разработке, а также в других сферах, включая разработку игр. За счёт читабельности, простого синтаксиса и отсутствия необходимости в компиляции язык хорошо подходит для обучения программированию, позволяя концентрироваться на изучении алгоритмов, концептов и парадигм. Отладка же и экспериментирование в значительной степени облегчаются тем фактом, что язык является интерпретируемым. Применяется язык многими крупными компаниями, такими как Google или Facebook. По состоянию на июль 2021 года Python занимает третье место в рейтинге TIOBE популярности языков программирования с показателем 10,95 %. «Языком года» по версии TIOBE Python объявлялся в 2007, 2010, 2018 и 2020 году.</p>
     </article>
-
+    <footer>
+        <div class="footer-block">
+            <p>2021 - <a href="https://vk.com/kirilllapushinskiy">kirilllapushinskiy</a></p>
+        </div>
+    </footer>
 </body>
 </html>
